# Tankify

./: .env  README.md  main.py  pyproject.toml  requirements.txt
components/: buttons.py  dialog_window.py  fields.py  language_toggle.py  links_separator_text.py  logo.py  navigations.py
components/__pycache__/: navigations.cpython-312.pyc.2792632980016
core/: auth_google.py  lang_manager.py  page_classes.py  set_dashboard.py  supa_base.py  theme.py
locales/: cs.json  en.json  language_manager.py  localization.py  manufacturers.json  open_files.py  service_terms.json  sk.json  translations.py
translations/: cs.json  en.json  sk.json
views/: add_user.py  base_page.py  create_user.py  create_vehicle.py  dashboard.py  edit_user.py  edit_vehicle.py  forgot_password.py  history.py  home_page.py  login_page.py  register_page.py  service_terms.py  settings.py  update_password.py  users.py  vehicle.py
views/__pycache__/: base_page.cpython-312.pyc.2507337070256  history.cpython-312.pyc.2086872528560  history.cpython-312.pyc.2087976836144  history.cpython-312.pyc.2344854625328  history.cpython-312.pyc.2456605891632  history.cpython-312.pyc.2771464936496  history.cpython-312.pyc.3003009473456  login_page.cpython-312.pyc.1383862202160  login_page.cpython-312.pyc.1726071945760  settings.cpython-312.pyc.2153367616048  settings.cpython-312.pyc.2292585821872  settings.cpython-312.pyc.2931261339312
