[tool.poetry]
name = "tankify"
version = "0.1.0"
description = "Manage car"
authors = ["Peter Kacmarik"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.24.1"
sqlalchemy = "^2.0.36"
supabase = "^2.9.1"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
